# factory-dashboard

./: .env.example  .gitignore  AGENT_HANDOFF.md  CLAUDE.md  README.md  TASKS.md  TODO.md  docker-compose.gpu.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
backend/app/: agent.py  config.py  database.py  main.py  models.py
backend/app/agent/: loop.py  system_prompt.py
backend/app/api/: admin.py  chat.py  ingest.py
backend/app/auth/: __init__.py  dependencies.py  hashing.py  jwt_tokens.py  permissions.py  routes.py  seed.py
backend/app/db/: embeddings.py  models.py  session.py
backend/app/enrichment/: __init__.py  downtime_extract.py  downtimes.py
backend/app/ingestion/: anchors.py  claude_fallback.py  enrichment.py  generic_xlsx.py  ingest_v1.py  jalali.py  loads_normalize.py  orchestrator.py  parser.py  parser_v1.py  pdf_parser.py  (+1 more)
backend/migrations/: alembic.ini  env.py
backend/schema_docs/: downtime.md  production.md
backend/tests/: conftest.py  test_agent.py  test_agent_memory_model.py  test_auth_dependencies.py  test_auth_hashing.py  test_auth_jwt.py  test_auth_models.py  test_auth_routes.py  test_auth_seed.py  test_enrichment.py  test_enrichment_downtimes.py  test_execute_sql.py  test_ingest_v1.py  test_jalali.py  test_llm.py  test_loads_normalize.py  test_main_endpoints.py  test_models.py  test_parser_helpers.py  test_parser_v1_helpers.py  test_parsers.py  test_python_exec.py  test_query_log.py  test_registry.py  test_save_memory.py  test_semantic_search.py
(+2115 files in other folders)
